# llm-council

./: .gitignore  README.md  pyproject.toml
src/llm_council/: __init__.py  __main__.py  checkpoint.py  client.py  config.py  council.py
