[project]
name = "llm-council"
version = "0.2.0"
description = "Multi-model LLM council: independent assessments, anonymised peer review, chairman synthesis. Routes across OpenRouter, OpenAI, Anthropic, Gemini, and Mistral."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Florian Burnat" },
]
keywords = ["llm", "council", "multi-model", "openrouter", "anthropic", "openai", "gemini", "mistral", "peer-review", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/flonat/llm-council"
Repository = "https://github.com/flonat/llm-council"
Issues = "https://github.com/flonat/llm-council/issues"

[project.scripts]
llm-council = "llm_council.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_council"]
